@@ -1,3 +1,9 @@
+2014-07-08  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/61459
+	PR fortran/58883
+	* gfortran.dg/allocatable_function_8.f90 : New test
+
 2014-07-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/61684
